Correct page view: remove horizontal scroll bar from many pages.

--- a/PrettyCats/PrettyCats/Content/Site.css
+++ b/PrettyCats/PrettyCats/Content/Site.css
@@ -144,7 +144,7 @@ opacity:1;
     font-size: 16px;
     margin: 20px auto;
     min-height: 500px;
-    min-width: 450px;
+    min-width: 250px;
     font-family: Verdana, sans-serif;
     padding-bottom: 50px;
 
